# roxie

./: .coderabbit.yml  .dockerignore  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  deployer.py  deployer_helm.py  deployer_operator.py  docker_auth.py  errors.py  flake.nix  go.mod  go.sum  helpers.py  image_cache.py  logger.py  main.py  port_forward.py  pyproject.toml  resources_presets.py  shell.sh
.github/: dependabot.yml
.github/workflows/: build-roxie-image.yml  code-quality.yml  create-dev-cluster.yml  delete-dev-cluster.yml  docker-build.yml  e2e-tests-kind.yml  e2e-tests.yml  main-push.yml  nix-autofix.yml  nix.yml  pr.yml  release.yml  test.yml  unit-tests.yml
cmd/: config.go  deploy.go  deploy_test.go  env.go  flags.go  logs.go  main.go  shell.go  subshell.go  teardown.go  version.go
cmd/roxie/: deploy.go  env.go  main.go  subshell.go  teardown.go  version.go
docs/plans/: 2026-01-20-local-image-support-design.md  2026-01-20-local-image-support.md
internal/cluster/: kind.go  kind_test.go
internal/clusterdefaults/: clusterdefaults.go  clusterdefaults_test.go
internal/component/: component.go
internal/constants/: registries.go
internal/containerrt/: containerrt.go  socket_darwin.go  socket_linux.go
internal/containerutil/: detect.go  detect_test.go
internal/deployer/: acs_images.go  addons.go  addons_helm_chart.go  addons_stackrox_helm_chart.go  addons_test.go  central_endpoint_test.go  config.go  config_addons.go  constants.go  crds.go  crs.go  deploy_via_helm.go  deploy_via_operator.go  deployer.go  feature_flags.go  feature_flags_test.go  konflux.go  konflux_test.go  kubectl.go  local_images.go  local_images_custom.go  local_images_generic.go  local_images_kind.go  local_images_minikube.go  openshift.go  openshift_test.go  operator.go  operator_env.go  operator_env_test.go  operator_instance.go  operator_instance_test.go  operator_olm.go  operator_test.go  override.go  roxctl.go
internal/dockerauth/: dockerauth.go  dockerauth_test.go
internal/env/: env.go  env_integration_test.go  (+2 more)
pr-reviews/: 77.md
roxie/: main.py
scripts/: roxcurl  update-nix-vendor-hash.sh
tests/: README.md  conftest.py  test_deployment_overrides.py  test_docker_auth.py  test_e2e_basic.py  test_image_cache.py  test_tags.py
(+81 files in other folders)
